Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -9,11 +9,17 @@ trigger:
 pool:
   vmImage: ubuntu-latest
 
+
 steps:
+- task: AzureKeyVault@2
+  inputs:
+    azureSubscription: 'sc-spxffadodev01'
+    KeyVaultName: 'kvxffappdev01'
 - task: Go@0
   displayName: 'go build'
   inputs:
     command: build
+
 - task: CmdLine@1
   displayName: 'apps:exists'
   inputs:
